more styling and bugs fixes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="calc">
         <div class="screen"></div>
         <div class="row">
-            <button class="nbr" onclick="handleDisplay('Reset')">Reset</button>
-            <button class="nbr" onclick="backtrack()">DEL</button>
-            <button class="nbr">C</button>
-            <button class="op" onclick="handleDisplay('÷')">÷</button>
+            <button class="bb" onclick="handleDisplay('Reset')">Reset</button>
+            <button class="bb" onclick="backtrack()">DEL</button>
+            <button class="bb">Dummy</button>
+            <button class="op"  onclick="handleDisplay('÷')">÷</button>
         </div>
         <div class="row">
             <button class="nbr" onclick="handleDisplay('7')">7</button>
